2004-07-02  Savin Zlobec  <savin@elatec.si> 

        * src/v85x_edb_v850_disk.c:
        Updated to work with the new DISK_CHANNEL macro definition
        and fixed read and write calls to honor the len parameter.

2004-01-15  Nick Garnett  <nickg@calivar.com>

	* src/v85x_edb_v850_disk.c: Removed block_pos arguments from read
	and write calls: it is not necessary.

2003-09-01 Savin Zlobec <savin@elatec.si>

        * cdl/v85x_edb_v850_disk.cdl:
        * src/v85x_edb_v850_disk.c:
        * src/cf_ata.h:
        A Elatec development board CF disk device driver



//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 2003 Savin Zlobec 
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//
// As a special exception, if other files instantiate templates or use macros
// or inline functions from this file, or you compile this file and link it
// with other works to produce a work based on this file, this file does not
// by itself cause the resulting work to be covered by the GNU General Public
// License. However the source code for this file must still be made available
// in accordance with section (3) of the GNU General Public License.
//